--- a/clientv2/index.html
+++ b/clientv2/index.html
@@ -91,7 +91,7 @@
                     <th width="16"></th>
                 </tr>
             </thead>
-            <tbody></tbody>
+            <tbody class="criteria-results"></tbody>
         </table>
 		
 	</div>
