--- a/trunk/clientv2/account-settings.html
+++ b/trunk/clientv2/account-settings.html
@@ -45,9 +45,10 @@
 			</div>
 			<div class="form-wrapper">
 				<label>Default Currency</label>
-				<span>
+				<span data-bind="visible: defaultCurrency() != 'EXPIRED'">
 					<select class="currency" data-bind="options: getCurrencies, value: selectedCurrency, optionsValue: 'id', optionsText: 'name'"></select>
 				</span>
+				<span data-bind="visible: defaultCurrency() == 'EXPIRED'">Singapore Dollar</span>
 			</div>
 			<div class="form-wrapper">
 				<label>Receive Mailings</label>
