--- a/clientv2/company-estimates.html
+++ b/clientv2/company-estimates.html
@@ -40,7 +40,7 @@
 	</section>
 	<section id="estimates-content" data-bind="css:{'display-hidden':dataExists}">
 		
-		<div class="summary hidden" data-bind="if: summaryDataExists">
+		<div class="summary hidden" data-bind="showHidden: summaryDataExists">
 			<h2>Summary</h2>
 			<p class="filing-currency-info">All dollar values shown in <span data-bind="text: companyInfo.filingCurrency"></span>.</p>
 			<div class="left">
@@ -73,11 +73,13 @@
 				
 				<div>
 					<h4>Price Volatility <img src="img/info.png" alt="" data-bind="tooltip: 'est_priceVolatility'" /></h4>
-					<p><span data-bind="text:getVolatilityEsitmateText(companyInfo.volatility)"></span>(<span data-bind="text:companyInfo.volatility, precision: 2"></span>)</p>
+					<p><span data-bind="text:getVolatilityEsitmateText(companyInfo.volatility)"></span>(<span data-bind="text:companyInfo.volatility, precision: 2, ifnoval:' "></span>)</p>
 				</div>
 				<div>
 					<h4>Industry Recommendation <img src="img/info.png" alt="" data-bind="tooltip: 'est_industryRecommendation'" /></h4>
-					<p><span data-bind="text:getIndustryRecommendationTxt(summaryData.industryRec)"></span>(<span data-bind="text:summaryData.industryRec, precision: 2"></span>)</p>
+					<p><span data-bind="text:getIndustryRecommendationTxt(summaryData.industryRec)"></span>
+						(<span data-bind="text:summaryData.industryRec, precision: 2, ifnoval:' '"></span>)
+					</p>
 				</div>
 			</div>
 			<div class="right">
