--- a/trunk/client/financials.html
+++ b/trunk/client/financials.html
@@ -453,7 +453,7 @@
                                     <tr>
                                         <td>
                                             <div class="checkbox">
-                                                <div class="trigger" data-name="totalRevenue1YrAnnGrowth" data-format="percent" data-group="ratio">Total Revenue <img src="img/info.jpg" alt="" class="glossary-item" glossary-key="totalRev1YrAnnGrowth" width="11" height="11" /></div>
+                                                <div class="trigger" data-name="totalRev1YrAnnGrowth" data-format="percent" data-group="ratio">Total Revenue <img src="img/info.jpg" alt="" class="glossary-item" glossary-key="totalRev1YrAnnGrowth" width="11" height="11" /></div>
                                                 <input type="checkbox">
                                             </div>
                                         </td>
