--- a/client/print.html
+++ b/client/print.html
@@ -659,7 +659,7 @@
 			                    </thead>
 			                    <tbody>
 			                        <tr>
-			                            <td data-name="totalRevenue1YrAnnGrowth" data-format="percent">Total Revenue</td>
+			                            <td data-name="totalRev1YrAnnGrowth" data-format="percent">Total Revenue</td>
 			                            <td>-</td><td>-</td><td>-</td><td>-</td><td>-</td>
 			                        </tr>
 			                        <tr>
