--- a/clientv2/company-estimates.html
+++ b/clientv2/company-estimates.html
@@ -72,11 +72,11 @@
 					</tr>
 				</table>
 				
-				<div>
+				<div class="hidden" data-bind="if: companyInfo.volatility, showHidden: companyInfo.volatility">
 					<h4>Price Volatility <img src="img/info.png" alt="" data-bind="tooltip: 'est_priceVolatility'" /></h4>
 					<p><span data-bind="text:getVolatilityEsitmateText(companyInfo.volatility)"></span>(<span data-bind="text:companyInfo.volatility, precision: 2, ifnoval:' '"></span>)</p>
 				</div>
-				<div>
+				<div class="hidden" data-bind="if: summaryData.industryRec, showHidden: summaryData.industryRec">
 					<h4>Industry Recommendation <img src="img/info.png" alt="" data-bind="tooltip: 'est_industryRecommendation'" /></h4>
 					<p><span data-bind="text:getIndustryRecommendationTxt(summaryData.industryRec)"></span>
 						(<span data-bind="text:summaryData.industryRec, precision: 2, ifnoval:' '"></span>)
