Added email for alerts, fixed decimal issue Fixed issue with copy Added loading gif

--- a/clientv2/company-tearsheet.html
+++ b/clientv2/company-tearsheet.html
@@ -214,7 +214,7 @@
 						</table>
 						<!-- /ko -->
 						<!-- ko if: $data.dividendHistory.dividendValues == null -->
-							<p style="text-align: center;">There is no owndership data available.</p>
+							<p style="text-align: center;">There is no ownership data available.</p>
 						<!-- /ko -->
 					</div>			
 				</div>				
