--- a/clientv2/alerts.html
+++ b/clientv2/alerts.html
@@ -244,7 +244,8 @@
 					</ul>
 				</div>
 				<div class="button-wrapper">
-					<a class="button" data-bind="click:$root.saveWatchlist">Save</a>					
+					<a class="button" data-bind="click:$root.saveWatchlist">Save</a>	
+					<a class="button email" data-bind="click:$root.sendEmail">Generate Email</a>				
 				</div>
 			</section>
 		</div>
