--- a/trunk/clientv2/company-estimates.html
+++ b/trunk/clientv2/company-estimates.html
@@ -74,7 +74,7 @@
 				
 				<div class="hidden" data-bind="if: companyInfo.volatility, showHidden: companyInfo.volatility">
 					<h4>Price Volatility <img src="img/info.png" alt="" data-bind="tooltip: 'est_priceVolatility'" /></h4>
-					<p><span data-bind="text:getVolatilityEsitmateText(companyInfo.volatility)"></span>(<span data-bind="text:companyInfo.volatility, precision: 2, ifnoval:' '"></span>)</p>
+					<p><span data-bind="text:getVolatilityEsitmateText(companyInfo.volatility)"></span>(<span data-bind="text:companyInfo.volatility, precision: 2"></span>)</p>
 				</div>
 				<div class="hidden" data-bind="if: summaryData.industryRec, showHidden: summaryData.industryRec">
 					<h4>Industry Recommendation <img src="img/info.png" alt="" data-bind="tooltip: 'est_industryRecommendation'" /></h4>
