Updates to tickets. Added fix for purchase links and fixed issues with chart number formatting

--- a/clientv2/index.html
+++ b/clientv2/index.html
@@ -117,7 +117,7 @@
 						<a class="underline" data-bind="siteLink:'sign-in'">Sign in</a> |
 						<a class="underline" data-bind="siteLink:'sign-up'">Start your free trial</a>
 						</span>
-						<a class="underline" target="_blank" href="purchase-account.html" data-bind="visible:($root.userStatus()=='TRIAL'|| $root.userStatus()=='EXPIRED')">Purchase</a>
+						<a class="underline" target="_top" href="purchase-account.html" data-bind="visible:($root.userStatus()=='TRIAL'|| $root.userStatus()=='EXPIRED')">Purchase</a>
 					</p>
 				<!--/ko-->
 
