--- a/trunk/clientv2/print.html
+++ b/trunk/clientv2/print.html
@@ -26,6 +26,7 @@
 						</td>
 						<td data-bind="visible: priceData().hasOwnProperty('price')" style="display: none;">
 							<span class="stock-price">
+								<div class="current-currency">This company reports in this currency: <span data-bind="text: priceData().currency"></span>.</div>
 								<div class="main">
 									<span class="currency" data-bind="text: priceData().currency"></span>  
 									<span class="lastPrice formattable" data-bind="text: priceData().price, format: 'number'">--</span>
