Added change for ticket 399 and 733

--- a/clientv2/company-tearsheet.html
+++ b/clientv2/company-tearsheet.html
@@ -303,7 +303,7 @@
 				</div>
 			</div>
 			
-			<div class="section-break">
+			<div class="section-break" data-bind="visible: companyInfo.exchange == 'SGX' || companyInfo.exchange == 'CATALIST'">
 				<div class="title">
 					<h5>S&P Capital IQ Alpha Factor Composites <img class="tooltip-left" data-bind="tooltip: 'alphaFactors'" alt="" src="img/info.png" /></h5>
 				</div>
