--- a/trunk/clientv2/iframe.html
+++ b/trunk/clientv2/iframe.html
@@ -54,7 +54,7 @@
 	    	var headerHeight = 200;
 			var cFrame = $("#company-info");
 	        var height = 600, scrollPos = 0;
-	        var scrolling = "yes";
+	        var scrolling = "no";
 	        try{
 	        	var pieces = data.split("-");
 				height = parseInt(pieces[0]);
