--- a/clientv2/premium.html
+++ b/clientv2/premium.html
@@ -35,8 +35,8 @@
 			</div>			
 		</div>
 		<div class="view-price">
-			<div class="price" data-bind="html:price">
-			</div>
+			<div class="price" data-bind="html:price"></div>
+			<div class="content" data-bind="html:content"></div>
 		</div>
 	</div>
 	<div class="grid disclosure scan">
