--- a/trunk/clientv2/print.html
+++ b/trunk/clientv2/print.html
@@ -28,7 +28,7 @@
 							<span class="stock-price">
 								<div class="current-currency">This company reports in this currency: <span data-bind="text: priceData().currency"></span>.</div>
 								<div class="main">
-									<span class="currency" data-bind="text: priceData().currency"></span>  
+									<span class="currency" data-bind="text: currencySymbol()"></span>  
 									<span class="lastPrice formattable" data-bind="text: priceData().price, format: 'number'">--</span>
 									&nbsp;
 									<span class="change" data-bind="text: priceData().change, format: 'number', css: { 'negative': priceData().change < 0 }, prependIf: '+', conditional: priceData().change > 0">--</span>
