--- a/trunk/clientv2/company-charting.html
+++ b/trunk/clientv2/company-charting.html
@@ -118,8 +118,8 @@
     			</div><!-- content indicators end -->
 
     			<div class="content financials" data-bind="css:{'show-hidden': activeTab() == 'financials'}">
-                	<div class="header hidden" data-bind="showHidden: isData">
-                        <div class="note">In millions <span data-bind="text: currency()"></span>, except per items.</div>
+                	<div class="header">
+                        <div class="note">In millions <span data-bind="text: currentCurrency()"></span>, except per items.</div>
                     </div>
     				<div class="financials-controls">
 
