Fix for ticket 865

--- a/clientv2/logout.html
+++ b/clientv2/logout.html
@@ -25,7 +25,7 @@
 		</header>
 		<div class="form">
 			<p>You have been signed out of StockFacts Premium.</p>
-			<p class="link"><a data-bind="siteLink:'index'">Return to StockFacts</a></p>
+			<p class="link"><a>Return to StockFacts</a></p>
 		</div>
 		<footer>
 			
