--- a/trunk/clientv2/logout.html
+++ b/trunk/clientv2/logout.html
@@ -25,7 +25,7 @@
 		</header>
 		<div class="form">
 			<p>You have been signed out of StockFacts Premium.</p>
-			<p class="link"><a>Return to StockFacts</a></p>
+			<p class="link"><a href="iframe.html?page=0&lang=en-us" target="_parent">Return to StockFacts</a></p>
 		</div>
 		<footer>
 			
