--- a/trunk/clientv2/alerts.html
+++ b/trunk/clientv2/alerts.html
@@ -35,7 +35,7 @@
 	<section id="alerts" data-bind="if:premiumUser() == true">
 		<h1>Alerts</h1>
 		<div class="grid scan intro">
-			<p>Create a Watch List with up to 10 companies in each. For each Watch List, indicate which alerts you would like to receive. Alerts are sent daily and will send to the email address that is in your account. <!--<span style="color:red; font-weight:bold">Watch List emails will be sent starting on April 13.</span>--></p>
+			<p>Create a Watch List with up to 10 companies in each. For each Watch List, indicate which alerts you would like to receive. Alerts are sent daily and will send to the email address that is in your account.</p>
 			<p>Enter a Watch List name: <input name="newWLName" type="text" class="text" class="addWatchlistName" data-bind="value: newWLName"> <a class="button" data-bind="click:$root.addWatchlist">Add Watch List</a></p>
 			<span class="error-messages" data-bind="validationMessage:newWLName">
 			</span>
