VWAP module implementation

--- a/clientv2/print.html
+++ b/clientv2/print.html
@@ -174,12 +174,15 @@
 											<span data-bind="text: companyInfo.vwapAsOfDate, format: 'date'"></span>
 										</td>
 		
-										<!--  doesn't -->
-										<td class="normal" style="text-align:right;" data-bind="visible: !companyInfo.hasOwnProperty('volWeightedAvgPrice') || companyInfo.volWeightedAvgPrice == null">-</td>
-		
-										<!-- both -->
-										<td>&nbsp;</td>
-										<td>&nbsp;</td>
+									<td data-bind="visible: companyInfo.hasOwnProperty('adjustedVolWeightedAvgPrice') && companyInfo.adjustedVolWeightedAvgPrice != null"><b>6-month adj. VWAP</b></td>
+									
+									<!-- has adj vwap -->
+									<td class="normal right" data-bind="visible: companyInfo.hasOwnProperty('adjustedVolWeightedAvgPrice') && companyInfo.adjustedVolWeightedAvgPrice != null">
+										<span data-bind="text: companyInfo.vwapCurrency"></span> 
+										<span data-bind="text: companyInfo.adjustedVolWeightedAvgPrice, format: 'number'"></span> 
+										<span class="normal">as of</span> 
+										<span data-bind="text: companyInfo.vwapAsOfDate, format: 'date'"></span>
+									</td>			
 										
 									</tr>
 								</tbody>
