--- a/trunk/clientv2/alerts.html
+++ b/trunk/clientv2/alerts.html
@@ -245,7 +245,7 @@
 				</div>
 				<div class="button-wrapper">
 					<a class="button" data-bind="click:$root.saveWatchlist">Save</a>	
-					<!--<a class="button email" data-bind="click:$root.sendEmail">Generate Email</a>-->
+					<a class="button email" data-bind="click:$root.sendEmail">Generate Email</a>
 				</div>
 			</section>
 		</div>
