Updates to tickets

--- a/clientv2/sign-up.html
+++ b/clientv2/sign-up.html
@@ -20,10 +20,10 @@
 <body style="width: auto;">
 	<section>
 		<header>
-			<h2>StockFacts Premium</h2>
+			<h2>StockFacts Plus</h2>
 		</header>
 		<div class="form">
-			<h4>Try StockFacts Premium free for <span data-bind="text: trialDays"></span> days.</h4>
+			<h4>Try StockFacts Plus free for <span data-bind="text: trialDays"></span> days.</h4>
 			<input class="text" type="email" data-bind="value: email" placeholder="Email Address">
 			<input class="text" type="password" data-bind="value: password" placeholder="Password">
 			<input class="text" type="password" data-bind="value: retypePassword" placeholder="Retype Password">
@@ -57,7 +57,7 @@
 			</div>
 		</div>
 		<footer>
-			<span class="left"><a data-bind="siteLink:'premium'">Learn more about StockFacts Premium</a></span>
+			<span class="left"><a data-bind="siteLink:'premium'">Learn more about StockFacts Plus</a></span>
 			<span class="right">Have an account? <a data-bind="siteLink:'sign-in'">Sign in</a></span>
 		</footer>
 	</section>
