Updated source copy

--- a/clientv2/print.html
+++ b/clientv2/print.html
@@ -471,7 +471,7 @@
 		</style>
 		<table class="footer">
 			<tr>
-				<td width="50%">Source: S&P Capital IQ</td>
+				<td width="50%">SGX StockFacts is a collaboration between SGX and S&amp;P Global Market Intelligence, a division of S&amp;P Global.</td>
 				<td width="50%" align="right" class="property" data-bind="text: company.companyInfo.companyName"></td>
 			</tr>
 		</table>
