--- a/clientv2/trade.html
+++ b/clientv2/trade.html
@@ -55,7 +55,7 @@
 	</div>
 
 	<div class="grid disclosure">
-		Source: S&amp;P Capital IQ - <a data-bind="siteLink:'terms-conditions'">Use of this information is subject to terms and conditions</a>
+		SGX StockFacts is a collaboration between SGX and S&amp;P Global Market Intelligence, a division of S&amp;P Global. Use of this information is subject to <a data-bind="siteLink:'terms-conditions'">terms and conditions</a>.
 	</div>	
 	
 <!-- goes at bottom for faster page load -->
