Change set for ticket 940, 941, 942

--- a/clientv2/trade.html
+++ b/clientv2/trade.html
@@ -36,7 +36,7 @@
                
 				<span onclick="window.top.location.href='http://www.sgx.com/wps/portal/sgxweb/home/mygateway/brokers/retail_img/broker/#cimb_securities';"><img src="img/broker/cimb_big.jpg" width="184" height="69" /></span>
 				<span onclick="window.top.location.href='http://www.sgx.com/wps/portal/sgxweb/home/mygateway/brokers/retail_brokers#dbs_vickers_online';"><img src="img/broker/dbs_big.jpg" width="184" height="69" /></span>
-               	<span><a href="http://www.dmg.com.sg/" target="_blank"><img src="img/broker/dmg_big.jpg" width="184" height="69" /></a></span>
+               	<span><a href="http://www.rhbinvest.com.sg/" target="_blank"><img src="img/broker/rhb-securities-pte-ltd.jpg" width="184" height="69" /></a></span>
 				<span onclick="window.top.location.href='http://www.sgx.com/wps/portal/sgxweb/home/mygateway/brokers/retail_brokers#lim_tan';"><img src="img/broker/limtan_big.jpg" width="184" height="69" /></span>
 				
 				<span onclick="window.top.location.href='http://www.sgx.com/wps/portal/sgxweb/home/mygateway/brokers/retail_brokers#maybank_kim_eng';"><img src="img/broker/maybank_big.jpg" width="184" height="69" /></span>
