--- a/clientv2/company-tearsheet.html
+++ b/clientv2/company-tearsheet.html
@@ -46,7 +46,7 @@
 			                    </tr>
 			                    <tr class="even">
 			                        <td>Previous Day Volume</td>
-			                        <td class="normal right border" data-bind="text: companyInfo.volume">-</td>
+			                        <td class="normal right border" data-bind="text: companyInfo.volume,formatVolume: 'volume'">-</td>
 			                        <td>Previous Close</td>
 			                        <td class="normal right" data-bind="text: companyInfo.previousClosePrice, formatNonZeroValue: 'dollars'">-</td>
 			                    </tr>
