--- a/clientv2/reset-password.html
+++ b/clientv2/reset-password.html
@@ -42,6 +42,7 @@
 	</section>
 	
 <!-- goes at bottom for faster page load -->
+<script type="text/javascript" src="js/vendor/encryption/jsencrypt.js"></script>
 <script type="text/javascript" src="js/vendor/store.js"></script>
 <script type="text/javascript" src="js/vendor/require.js" data-main="js/config.js"></script>
 <script type="text/javascript">
