Changing pdf hosting from client's servers to our servers as requested by SGX

--- a/clientv2/index.html
+++ b/clientv2/index.html
@@ -38,7 +38,7 @@
 					
 		                <h2>
 		                	Your search for investment opportunity begins here.
-		                	<div class="button user-guide" onclick="window.open('http://www.sgx.com/wps/wcm/connect/f912408c-fc27-4cfa-ac02-90970dc6fd30/StockFacts-User-Guide.pdf?MOD=AJPERES');"><img src="img/pdf.png" width="16" height="16" /> View User Guide</div>
+		                	<div class="button user-guide" onclick="window.open('pdf/StockFacts-User-Guide.pdf?MOD=AJPERES');"><img src="img/pdf.png" width="16" height="16" /> View User Guide</div>
 		                </h2>
 		                
 		                <div class="searchtoggle">
