Portfolio text change from Alerts to StockList

--- a/branches/portfolio/clientv2/index.html
+++ b/branches/portfolio/clientv2/index.html
@@ -58,7 +58,7 @@
 			            	<span class="button" data-bind="click: clickEvents.screenerToggle" data-name="advanced-screener">Search by Screener<span data-name="advanced-screener" class="arrow"></span></span>
 							<span class="button" data-bind="click: clickEvents.screenerToggle" data-name="alpha-factors">Search by Alpha Factors<span data-name="alpha-factors" class="arrow"></span></span>
 							<span class="button" data-bind="click: clickEvents.screenerToggle" data-name="all-companies">View All Companies<span data-name="all-companies" class="arrow"></span></span>
-							<a class="button button-alerts" data-bind="siteLink:'alerts'">View Alerts</a>
+							<a class="button button-alerts" data-bind="siteLink:'alerts'">View StockList</a>
 		                </div>
 		            </div>
 				
