KeyDev Dropdown code changes

--- a/branches/portfolio/clientv2/key-developments.html
+++ b/branches/portfolio/clientv2/key-developments.html
@@ -32,7 +32,7 @@
 			<div class="control-box">
 				<table>
 					<tr>
-						<td><select data-bind="" ></select></td>
+						<td><select id="watchlistCompaniesSelect" data-bind="options: watchlistCompanies, optionsCaption: 'All Companies in StockList', value: selectedValue, optionsValue: 'ticker', optionsText: 'companyName'"></select></td>
 					</tr>
 					<tr>
 						<td><label><input type="checkbox" value="" data-bind="">Announced/Completed Transactions</label></td>
