Portfolio Valuation Performance Chart Changes

--- a/branches/portfolio/clientv2/valuation.html
+++ b/branches/portfolio/clientv2/valuation.html
@@ -29,9 +29,11 @@
 		
 		<!-- div content for performance functionality -->
 		<div class="grid valuation-results performance" data-bind="css:{'show-hidden': activeTab() == 'performance'}">
-			<div id="performanceChartContent">
+		
+			<div id="performance-chart-content" align="center">
 				Chart Content has to be display
 			</div>
+			
 			<div>
 				<table>
 					<thead>
