Portfolio Add Transaction functionality changes

--- a/branches/portfolio/clientv2/valuation.html
+++ b/branches/portfolio/clientv2/valuation.html
@@ -106,15 +106,27 @@
 					</thead>
 					<tbody>
 						<tr>
-							<td class="company-row"><select class="select-company" id="watchlistCompaniesSelect" data-bind="options: watchlistCompanies, optionsCaption: 'Select a Company', optionsValue: 'ticker', optionsText: 'companyName'"></select></td>
-							<td><select class="select-type" data-bind="" ></select></td>
-							<td><input type="text" data-bind=""/></td>
-							<td><input type="text" data-bind=""/></td>
-							<td><input type="text" data-bind=""/></td>
+							<td class="company-row"><select class="select-company" id="watchlistCompaniesSelect" data-bind="options: watchlistCompanies, optionsCaption: 'Select a Company', value: selectedCompanyValue, optionsValue: 'ticker', optionsText: 'companyName'"></select></td>
+							<td><select class="select-type" data-bind="options: availableTypes, value: selectedAvailableType" ></select></td>
+							<td><input type="text" id="tradeDate" /></td>
+							<td><input type="text" id="numberOfShares" /></td>
+							<td><input type="text" id="costAtPurchase" /></td>
 							<td>&nbsp;</td>
-							<td><a class="add-button" data-bind="">Add</a></td>
+							<td><a class="add-button" data-bind="click: addTrans">Add</a></td>
 						</tr>
 					</tbody>
+					<tbody data-bind="template: { name: 'transTmpl', foreach: transItems }"></tbody>
+				    	<script id="transTmpl" type="text/html">
+        					<tr>
+								<td class="company-row" data-bind="text: companyName"></td>
+								<td><select class="select-type" data-bind="options: $root.availableTypes, value: transactionType" ></select></td>
+								<td><input type="text" data-bind="value: tradeDate"/></td>
+								<td><input type="text" data-bind="value: numberOfShares"/></td>
+								<td><input type="text" data-bind="value: costAtPurchase"/></td>
+								<td data-bind="text: currentPrice"></td>
+								<td><img src="img/x-button.png" alt="" data-bind="click: $root.removeItem.bind($root), tooltip: 'Delete Transaction'"  /></td>
+						    </tr>
+    				  </script>
 				</table>
 			</div>
 		</div>
